add cards.html slider widgets.html

--- a/pages/widgets.html
+++ b/pages/widgets.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../css/variable.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/sidebar.css">
+    <link rel="stylesheet" href="../css/font-awesome/5.12.1/all.css">
+    <link rel="stylesheet" href="../css/font-awesome/4.7/font-awesome.css">
 </head>
 <body>
 <div class="wrapper">
@@ -221,9 +223,122 @@
         </nav>
         <!--Main Content-->
         <div class="wrapper-content">
-            <h1> Base </h1>
+            <h1> Widgets </h1>
             <div class="row">
-                <div class="col-sm-12"></div>
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    <div class="info-box">
+                        <span class="info-box-icon bg-primary"><i class="fa fa-4x fa-envelope-o"></i></span>
+
+                        <div class="info-box-content">
+                            <span class="info-box-text">Messages</span>
+                            <span class="info-box-number">1,410</span>
+                        </div>
+                        <!-- /.info-box-content -->
+                    </div>
+                    <!-- /.info-box -->
+                </div>
+                <!-- /.col -->
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    <div class="info-box">
+                        <span class="info-box-icon bg-success"><i class="fa fa-4x fa-flag-o"></i></span>
+
+                        <div class="info-box-content">
+                            <span class="info-box-text">Bookmarks</span>
+                            <span class="info-box-number">410</span>
+                        </div>
+                        <!-- /.info-box-content -->
+                    </div>
+                    <!-- /.info-box -->
+                </div>
+                <!-- /.col -->
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    <div class="info-box">
+                        <span class="info-box-icon bg-warning"><i class="fa fa-4x fa-files-o"></i></span>
+
+                        <div class="info-box-content">
+                            <span class="info-box-text">Uploads</span>
+                            <span class="info-box-number">13,648</span>
+                        </div>
+                        <!-- /.info-box-content -->
+                    </div>
+                    <!-- /.info-box -->
+                </div>
+                <!-- /.col -->
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    <div class="info-box">
+                        <span class="info-box-icon bg-danger"><i class="fa fa-4x fa-star-o"></i></span>
+
+                        <div class="info-box-content">
+                            <span class="info-box-text">Likes</span>
+                            <span class="info-box-number">93,139</span>
+                        </div>
+                        <!-- /.info-box-content -->
+                    </div>
+                    <!-- /.info-box -->
+                </div>
+                <!-- /.col -->
+            </div>
+            <div class="row mt-4">
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    <div class="info-box">
+                        <span class="info-box-icon bg-primary-light"><i class="fa fa-4x fa-bookmark-o"></i></span>
+
+                        <div class="info-box-content bg-primary">
+                            <span class="info-box-text">Bookmarks</span>
+                            <span class="info-box-number">41,410</span>
+                            <hr>
+                            <span class="progress-description">
+                                70% Increase in 30 Days
+                              </span>
+                        </div>
+                        <!-- /.info-box-content -->
+                    </div>
+                    <!-- /.info-box -->
+                </div>
+                <!-- /.col -->
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    <div class="info-box">
+                        <span class="info-box-icon bg-success-light"><i class="fa fa-4x fa-thumbs-o-up"></i></span>
+
+                        <div class="info-box-content bg-success">
+                            <span class="info-box-text">Likes</span>
+                            <span class="info-box-number">41,410</span>
+                            <hr>
+                            <span class="progress-description">
+                                70% Increase in 30 Days
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    <div class="info-box">
+                        <span class="info-box-icon bg-warning-light"><i class="fa fa-4x fa-calendar"></i></span>
+
+                        <div class="info-box-content bg-warning">
+                            <span class="info-box-text">Events</span>
+                            <span class="info-box-number">41,410</span>
+                            <hr>
+                            <span class="progress-description">
+                                70% Increase in 30 Days
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    <div class="info-box bg-red">
+                        <span class="info-box-icon bg-danger-light"><i class="fa fa-4x fa-comments-o"></i></span>
+
+                        <div class="info-box-content bg-danger">
+                            <span class="info-box-text">Comments</span>
+                            <span class="info-box-number">41,410</span>
+
+                            <hr>
+                            <span class="progress-description">
+                                70% Increase in 30 Days
+                            </span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -231,7 +346,7 @@
 </body>
 <script src="../js/jquery/3.3.1/jquery.slim.min.js"></script>
 <script src="../js/bootstrap/4.4.1/bootstrap.min.js"></script>
-<script src="../js/font-awesome/5.12.1/all.min.js"></script>
+<!--<script src="../js/font-awesome/5.12.1/all.min.js"></script>-->
 <script src="../js/app.js"></script>
 
 <script type="text/javascript">
