--- a/pages/cards.html
+++ b/pages/cards.html
@@ -221,9 +221,133 @@
         </nav>
         <!--Main Content-->
         <div class="wrapper-content">
-            <h1> Base </h1>
+            <h1> Cards </h1>
             <div class="row">
-                <div class="col-sm-12"></div>
+                <div class="col-sm-6 col-md-4 mt-4">
+                    <div class="card">
+                        <div class="card-header">Card title</div>
+                        <div class="card-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-4 mt-4">
+                    <div class="card">
+                        <div class="card-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</div>
+                        <div class="card-footer">Card footer</div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-4 mt-4">
+                    <div class="card">
+                        <div class="card-header">Card with icon</div>
+                        <div class="card-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-4 mt-4">
+                    <div class="card">
+                        <div class="card-header">Card with switch
+                            <label class="c-switch c-switch-sm c-switch-text c-switch-info float-right mb-0">
+                                <input class="c-switch-input" type="checkbox"><span class="c-switch-label" data-on="On" data-off="Off"></span><span class="c-switch-handle"></span>
+                            </label>
+                        </div>
+                        <div class="card-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-4 mt-4">
+                    <div class="card">
+                        <div class="card-header">Card with label<span class="badge badge-success float-right">Success</span></div>
+                        <div class="card-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-4 mt-4">
+                    <div class="card">
+                        <div class="card-header">Card with label<span class="badge badge-pill badge-danger float-right">42</span></div>
+                        <div class="card-body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 col-md-4 mt-4">
+                    <div class="card text-white bg-primary text-center">
+                        <div class="card-body">
+                            <blockquote class="card-bodyquote">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                                <footer>Someone famous in
+                                    <cite title="Source Title">Source Title</cite>
+                                </footer>
+                            </blockquote>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-4 mt-4">
+                    <div class="card text-white bg-success text-center">
+                        <div class="card-body">
+                            <blockquote class="card-bodyquote">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                                <footer>Someone famous in
+                                    <cite title="Source Title">Source Title</cite>
+                                </footer>
+                            </blockquote>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-4 mt-4">
+                    <div class="card text-white bg-info text-center">
+                        <div class="card-body">
+                            <blockquote class="card-bodyquote">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                                <footer>Someone famous in
+                                    <cite title="Source Title">Source Title</cite>
+                                </footer>
+                            </blockquote>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-4 mt-4">
+                    <div class="card text-white bg-warning text-center">
+                        <div class="card-body">
+                            <blockquote class="card-bodyquote">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                                <footer>Someone famous in
+                                    <cite title="Source Title">Source Title</cite>
+                                </footer>
+                            </blockquote>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-4 mt-4">
+                    <div class="card text-white bg-danger text-center">
+                        <div class="card-body">
+                            <blockquote class="card-bodyquote">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                                <footer>Someone famous in
+                                    <cite title="Source Title">Source Title</cite>
+                                </footer>
+                            </blockquote>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-4 mt-4">
+                    <div class="card text-white bg-primary text-center">
+                        <div class="card-body">
+                            <blockquote class="card-bodyquote">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                                <footer>Someone famous in
+                                    <cite title="Source Title">Source Title</cite>
+                                </footer>
+                            </blockquote>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
