--- a/pages/data-tables.html
+++ b/pages/data-tables.html
@@ -22,23 +22,135 @@
             </div>
         </div>
         <ul class="list-unstyled components">
-            <li class="active">
+            <li class="">
                 <a href="../index.html">
                     <i class="fas fa-home"></i>
-                    Home
+                    <span>Home</span>
                 </a>
+            </li>
+            <li class="">
+                <a href="#layout" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                    <i class="far fa-gem"></i>
+                    <span>Layouts</span>
+                </a>
+                <ul class="collapse list-unstyled" id="layout">
+                    <li>
+                        <a href="top-navigation.html">
+                            <i class="far fa-circle mr-2"></i>
+                            <span>Top Navigation</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="boxed.html"><i class="far fa-circle mr-2"></i> Boxed</a>
+                    </li>
+                    <li>
+                        <a href="fixed.html"><i class="far fa-circle mr-2"></i> Fixed</a>
+                    </li>
+                    <li>
+                        <a href="collapsed-sidebar.html"><i class="far fa-circle mr-2"></i>
+                            Collapsed Sidebar</a>
+                    </li>
+                </ul>
+            </li>
+
+            <li>
+                <a href="#ui" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                    <i class="fa fa-laptop"></i>
+                    UI Elements
+                </a>
+                <ul class="collapse list-unstyled" id="ui">
+                    <li>
+                        <a href="colors.html"><i class="far fa-circle mr-2"></i> Colors</a>
+                    </li>
+                    <li>
+                        <a href="typography.html"><i class="far fa-circle mr-2"></i> Typography</a>
+                    </li>
+                    <li>
+                        <a href="icons.html"><i class="far fa-circle mr-2"></i> Icons</a>
+                    </li>
+                    <li>
+                        <a href="buttons.html"><i class="far fa-circle mr-2"></i> Buttons</a>
+                    </li>
+                    <li>
+                        <a href="notifications.html"><i class="far fa-circle mr-2"></i> Notifications</a>
+                    </li>
+                    <li>
+                        <a href="modals.html"><i class="far fa-circle mr-2"></i> Modals</a>
+                    </li>
+                    <li>
+                        <a href="progress-bars.html"><i class="far fa-circle mr-2"></i> Progress Bars</a>
+                    </li>
+                    <li>
+                        <a href="tabs.html"><i class="far fa-circle mr-2"></i> Tabs</a>
+                    </li>
+                    <li>
+                        <a href="sliders.html"><i class="far fa-circle mr-2"></i> Sliders</a>
+                    </li>
+                    <li>
+                        <a href="tree-views.html"><i class="far fa-circle mr-2"></i> Tree Views</a>
+                    </li>
+                    <li>
+                        <a href="netables.html"><i class="far fa-circle mr-2"></i> Nestables</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="#form" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                    <i class="fa fa-edit"></i>
+                    Forms
+                </a>
+                <ul class="collapse list-unstyled" id="form">
+                    <li>
+                        <a href="form.html"><i class="far fa-circle mr-2"></i> Forms Elements</a>
+                    </li>
+                    <li>
+                        <a href="form-layout.html"><i class="far fa-circle mr-2"></i> Forms Layouts</a>
+                    </li>
+                    <li>
+                        <a href="form-wizard.html"><i class="far fa-circle mr-2"></i> Forms Wizard</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="cards.html">
+                    <i class="fas fa-chart-line"></i>
+                    Cards
+                </a>
+            </li>
+            <li>
+                <a href="widgets.html">
+                    <i class="fa fa-flask"></i>
+                    Widgets
+                </a>
+            </li>
+            <li>
+                <a href="#map" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                    <i class="fa fa-map-marked-alt"></i>
+                    Maps
+                </a>
+                <ul class="collapse list-unstyled" id="map">
+                    <li>
+                        <a href="map-googles.html"><i class="far fa-circle mr-2"></i> Google Maps</a>
+                    </li>
+                    <li>
+                        <a href="map-vector.html"><i class="far fa-circle mr-2"></i> Vector Maps</a>
+                    </li>
+                </ul>
             </li>
             <li>
                 <a href="#chart" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
                     <i class="fas fa-chart-line"></i>
                     Charts
                 </a>
-                <ul class="collapse list-unstyled show" >
+                <ul class="collapse list-unstyled" id="chart">
                     <li>
-                        <a href="chart-js.html"><i class="far fa-circle"></i> Chart JS</a>
+                        <a href="chart-js.html"><i class="far fa-circle mr-2"></i> Chart JS</a>
                     </li>
                     <li>
-                        <a href="chart-google.html"><i class="far fa-circle"></i> Google Chart</a>
+                        <a href="chart-google.html"><i class="far fa-circle mr-2"></i> Google Chart</a>
+                    </li>
+                    <li>
+                        <a href="chart-google.html"><i class="far fa-circle mr-2"></i> Inline Charts</a>
                     </li>
                 </ul>
             </li>
@@ -47,12 +159,52 @@
                     <i class="fas fa-table"></i>
                     Tables
                 </a>
-                <ul class="collapse list-unstyled show" id="homeSubmenu">
+                <ul class="collapse list-unstyled" id="homeSubmenu">
                     <li>
-                        <a href="basic_tables.html"><i class="far fa-circle"></i> Basic Tables</a>
+                        <a href="basic_tables.html"><i class="far fa-circle mr-2"></i> Basic Tables</a>
                     </li>
                     <li>
-                        <a href="data-tables.html"><i class="far fa-circle"></i> Data Tables</a>
+                        <a href="data-tables.html"><i class="far fa-circle mr-2"></i> Data Tables</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="#extra" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                    <i class="fa fa-dungeon"></i>
+                    Extra
+                </a>
+                <ul class="collapse list-unstyled" id="extra">
+                    <li>
+                        <a href="extra-invoice.html"><i class="far fa-circle mr-2"></i> Invoice</a>
+                    </li>
+                    <li>
+                        <a href="extra-404.html"><i class="far fa-circle mr-2"></i> 404 Page</a>
+                    </li>
+                    <li>
+                        <a href="extra-500.html"><i class="far fa-circle mr-2"></i> 500 Page</a>
+                    </li>
+                    <li>
+                        <a href="extra-blank.html"><i class="far fa-circle mr-2"></i> Blank Page</a>
+                    </li>
+                    <li>
+                        <a href="extra-login.html"><i class="far fa-circle mr-2"></i> Login</a>
+                    </li>
+                    <li>
+                        <a href="extra-register.html"><i class="far fa-circle mr-2"></i> Register</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="#menus" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                    <i class="fa fa-sitemap"></i>
+                    Menu
+                </a>
+                <ul class="collapse list-unstyled" id="menus">
+                    <li>
+                        <a href="menu-lv1.html"><i class="far fa-circle mr-2"></i> Level 1</a>
+                    </li>
+                    <li>
+                        <a href="menu-lv2.html"><i class="far fa-circle mr-2"></i> Level 2 & Sub</a>
                     </li>
                 </ul>
             </li>
