--- a/pages/extra-login.html
+++ b/pages/extra-login.html
@@ -221,42 +221,9 @@
         </nav>
         <!--Main Content-->
         <div class="wrapper-content">
-            <h1> Goggle Maps </h1>
+            <h1> Base </h1>
             <div class="row">
-                <div class="col-sm-12">
-                    <div class="mapouter">
-                        <iframe
-                                class="mapouter"
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14896.387094976819!2d105.8457196240538!3d21.028813504362187!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135abc000809ea7%3A0xbb2716ec0282371d!2zxJDhu4FuIE5n4buNYyBTxqFu!5e0!3m2!1svi!2s!4v1585536770712!5m2!1svi!2s"
-                                frameborder="0"
-                                style="width: 100%; height: 500px "
-                                allowfullscreen="true"
-                                aria-hidden="false"
-                                tabindex="0"
-                        >
-                        </iframe>
-                    </div>
-                </div>
-                <div class="col-12 mt-4">
-                    <div class="card">
-                        <div class="card-body">
-                            <h3>HTML Code</h3>
-                            <hr>
-                            <textarea disabled style="width: 100%; height: 300px">
-<iframe
-        class="mapouter"
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14896.387094976819!2d105.8457196240538!3d21.028813504362187!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135abc000809ea7%3A0xbb2716ec0282371d!2zxJDhu4FuIE5n4buNYyBTxqFu!5e0!3m2!1svi!2s!4v1585536770712!5m2!1svi!2s"
-        frameborder="0"
-        style="width: 100%; height: 500px "
-        allowfullscreen="true"
-        aria-hidden="false"
-        tabindex="0"
->
-</iframe>
-                            </textarea>
-                        </div>
-                    </div>
-                </div>
+                <div class="col-sm-12"></div>
             </div>
         </div>
     </div>
