add 500 pages/extra-500.html

--- a/pages/extra-404.html
+++ b/pages/extra-404.html
@@ -239,8 +239,6 @@
         </nav>
         <!--Main Content-->
         <div class="wrapper-content">
-            <h1> 404 page </h1>
-            <hr>
             <section class="content mt-5">
                 <div class="container-fluid error-page">
                     <div class="container">
@@ -249,7 +247,7 @@
                                 <h2 class="headline text-warning"> 404 </h2>
                                 <div class="error-content">
                                     <h3>
-                                        <i class="fa fa-warning text-yellow"></i> Oops! Page not found.
+                                        <i class="fa fa-warning text-warning"></i> Oops! Page not found.
                                     </h3>
                                     <p>
                                         We could not find the page you were looking for.
