--- a/pages/extra-500.html
+++ b/pages/extra-500.html
@@ -8,6 +8,24 @@
     <link rel="stylesheet" href="../css/variable.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/sidebar.css">
+    <link rel="stylesheet" href="../css/font-awesome/4.7/font-awesome.css">
+    <link rel="stylesheet" href="../css/font-awesome/5.12.1/all.css">
+    <style>
+        .error-page {
+            background: #fff;
+            padding: 50px 0px;
+        }
+        .error-box {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .headline {
+            font-size: 60px;
+            font-weight: normal;
+            margin-right: 30px;
+        }
+    </style>
 </head>
 <body>
 <div class="wrapper">
@@ -221,17 +239,40 @@
         </nav>
         <!--Main Content-->
         <div class="wrapper-content">
-            <h1> Base </h1>
-            <div class="row">
-                <div class="col-sm-12"></div>
-            </div>
+            <section class="content mt-5">
+                <div class="container-fluid error-page">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-8 offset-md-2 error-box">
+                                <h2 class="headline text-danger"> 500 </h2>
+                                <div class="error-content">
+                                    <h3>
+                                        <i class="fa fa-warning text-danger"></i> Oops! Something went wrong.
+                                    </h3>
+                                    <p>
+                                        We could not find the page you were looking for.
+                                        Meanwhile, you may <a href="../index.html">return to Home</a> or try using the search form.
+                                    </p>
+                                    <form class="search-form">
+                                        <div class="input-group">
+                                            <input type="text" name="search" class="form-control" placeholder="Search">
+                                            <div class="input-group-append">
+                                                <span class="input-group-text bg-danger"><i class="fa fa-search"></i></span>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
     </div>
 </div>
 </body>
 <script src="../js/jquery/3.3.1/jquery.slim.min.js"></script>
 <script src="../js/bootstrap/4.4.1/bootstrap.min.js"></script>
-<script src="../js/font-awesome/5.12.1/all.min.js"></script>
 <script src="../js/app.js"></script>
 
 <script type="text/javascript">
