--- a/pages/extra-login.html
+++ b/pages/extra-login.html
@@ -8,6 +8,29 @@
     <link rel="stylesheet" href="../css/variable.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/sidebar.css">
+    <link rel="stylesheet" href="../css/font-awesome/4.7/font-awesome.css">
+    <link rel="stylesheet" href="../css/font-awesome/5.12.1/all.css">
+    <style>
+        .login-page {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 70vh;
+        }
+        .login-page .card {
+            padding: 20px;
+        }
+        .login-content {
+            display: flex;
+        }
+        .login-box {
+            width: 400px;
+        }
+        .register-box {
+            text-align: center;
+            width: 350px;
+        }
+    </style>
 </head>
 <body>
 <div class="wrapper">
@@ -221,9 +244,66 @@
         </nav>
         <!--Main Content-->
         <div class="wrapper-content">
-            <h1> Base </h1>
-            <div class="row">
-                <div class="col-sm-12"></div>
+            <div class="container-fluid login-page">
+                <div class="login-content">
+                    <div class="card-group">
+                        <div class="card login-box">
+                            <div class="card-body">
+                                <h1 class="text-center pb-4">My Bootstrap</h1>
+                                <p>
+                                    Sign In to your account
+                                </p>
+                                <form action="">
+                                    <div class="form-group">
+                                        <div class="input-group">
+                                            <div class="input-group-prepend">
+                                            <span class="input-group-text" id="inputGroupPrepend3">
+                                                <i class="fa fa-user-circle"></i>
+                                            </span>
+                                            </div>
+                                            <input
+                                                    type="text"
+                                                    class="form-control"
+                                                    id="validationServerUsername"
+                                                    aria-describedby="inputGroupPrepend3"
+                                                    placeholder="Username"
+                                                    required
+                                            >
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="input-group">
+                                            <div class="input-group-prepend">
+                                            <span class="input-group-text" id="inputGroupPrepend">
+                                                <i class="fa fa-lock"></i>
+                                            </span>
+                                            </div>
+                                            <input
+                                                type="password"
+                                                class="form-control"
+                                                id="password"
+                                                aria-describedby="inputGroupPrepend"
+                                                placeholder="Username"
+                                                required
+                                            >
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                        <div class="card register-box bg-warning">
+                            <div class="card-body">
+                                <h2>Sign up</h2>
+                                <p class="mt-4">
+                                    Create new account today to reap the benefits of a personalized Website experience.
+                                </p>
+                                <a href="./extra-register.html" class="btn btn-lg btn-outline-primary mt-4">
+                                    Register Now
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -231,7 +311,6 @@
 </body>
 <script src="../js/jquery/3.3.1/jquery.slim.min.js"></script>
 <script src="../js/bootstrap/4.4.1/bootstrap.min.js"></script>
-<script src="../js/font-awesome/5.12.1/all.min.js"></script>
 <script src="../js/app.js"></script>
 
 <script type="text/javascript">
