--- a/pages/extra-register.html
+++ b/pages/extra-register.html
@@ -8,6 +8,25 @@
     <link rel="stylesheet" href="../css/variable.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/sidebar.css">
+    <link rel="stylesheet" href="../css/font-awesome/4.7/font-awesome.css">
+    <link rel="stylesheet" href="../css/font-awesome/5.12.1/all.css">
+    <style>
+        .login-page {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 90vh;
+        }
+        .login-page .card {
+            padding: 20px;
+        }
+        .login-content {
+            display: flex;
+        }
+        .register-box {
+            width: 500px;
+        }
+    </style>
 </head>
 <body>
 <div class="wrapper">
@@ -211,19 +230,76 @@
     </nav>
     <!--    Page Content-->
     <div id="content" class="gray-bg">
-        <!--        Top Header-->
-        <nav class="navbar navbar-light bg-light navbar-static-top">
-            <div class="navbar-left">
-                <button type="button" id="sidebarCollapse" class="btn btn-info">
-                    <i class="fas fa-align-left"></i>
-                </button>
-            </div>
-        </nav>
         <!--Main Content-->
         <div class="wrapper-content">
-            <h1> Base </h1>
-            <div class="row">
-                <div class="col-sm-12"></div>
+            <div class="container-fluid login-page">
+                <div class="login-content">
+                    <div class="card-group">
+                        <div class="card register-box">
+                            <div class="card-body">
+                                <h1 class="text-center pb-4">Create new account</h1>
+                                <form action="">
+                                    <h3>Personal Information</h3>
+                                    <hr>
+                                    <div class="form-group">
+                                        <label>First Name</label>
+                                        <input
+                                            type="text"
+                                            class="form-control"
+                                            name="username"
+                                            required
+                                        >
+                                    </div>
+
+
+                                    <div class="form-group">
+                                        <label>Last Name</label>
+                                        <input
+                                                type="text"
+                                                class="form-control"
+                                                name="username"
+                                                required
+                                        >
+                                    </div>
+                                    <h3>Sign-in Information</h3>
+                                    <hr>
+                                    <div class="form-group">
+                                        <label>Username</label>
+                                        <input
+                                            type="text"
+                                            class="form-control"
+                                            name="username"
+                                            required
+                                        >
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Password</label>
+                                        <input
+                                            type="text"
+                                            class="form-control"
+                                            name="password"
+                                            id="password"
+                                            required
+                                        >
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Password Confirm</label>
+                                        <input
+                                            type="text"
+                                            class="form-control"
+                                            name="password"
+                                            id="confirmPassword"
+                                            required
+                                        >
+                                    </div>
+                                    <div class="text-center mt-5">
+                                        <button class="btn btn-lg btn-outline-success"> Create New Account </button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -231,7 +307,6 @@
 </body>
 <script src="../js/jquery/3.3.1/jquery.slim.min.js"></script>
 <script src="../js/bootstrap/4.4.1/bootstrap.min.js"></script>
-<script src="../js/font-awesome/5.12.1/all.min.js"></script>
 <script src="../js/app.js"></script>
 
 <script type="text/javascript">
